# src/model/api/externalStorage/IExternalStorageApiModel.ts
@@ -4,4 +4,5 @@ export default interface IExternalStorageApiModel {
     getList(): apid.ExternalStorageList;
     getFiles(storageName: string, subPath: string): Promise<apid.ExternalStorageFileList>;
     rename(storageName: string, subPath: string, newName: string): Promise<void>;
+    getHistory(limit: number): Promise<apid.ExternalStorageMoveHistory>;
 }
